# tx-turnout-scraper

./: pyproject.toml
src/texas_turnout_scraper/: models.py  results_scraper.py  sos_fields.toml  usr_options.toml
src/texas_turnout_scraper/tmp/2024/2024 NOVEMBER 5TH GENERAL ELECTION/: 20240929.csv  20240930.csv  20241001.csv  20241002.csv  20241003.csv  20241004.csv  20241005.csv  20241006.csv  20241007.csv  20241008.csv  20241009.csv  20241010.csv  20241011.csv  20241012.csv  20241013.csv  20241014.csv  20241015.csv  20241016.csv  20241017.csv  20241018.csv  20241019.csv  20241020.csv
src/texas_turnout_scraper/tmp/tx_vote_rosters/2020/2020 MARCH 3RD DEMOCRATIC PRIMARY/: 20200202.csv  20200203.csv  20200204.csv  20200205.csv  20200206.csv  20200207.csv  20200208.csv  20200210.csv  20200211.csv  20200212.csv  20200213.csv  20200214.csv  20200215.csv  20200216.csv  20200217.csv  20200219.csv  20200220.csv  20200222.csv  20200223.csv
src/texas_turnout_scraper/tmp/tx_vote_rosters/2020/2020 MARCH 3RD REPUBLICAN PRIMARY/: 20200202.csv  20200203.csv  20200204.csv  20200205.csv  20200207.csv  20200208.csv  20200209.csv  20200210.csv  20200211.csv  20200212.csv  20200213.csv  20200214.csv  20200215.csv  20200216.csv  20200217.csv  20200222.csv  20200223.csv
src/texas_turnout_scraper/tmp/tx_vote_rosters/2022/2022 MARCH 1ST DEMOCRATIC PRIMARY/: 20220130.csv  20220131.csv  20220201.csv  20220202.csv  20220203.csv  20220204.csv  20220205.csv  20220206.csv  20220207.csv  20220208.csv  20220209.csv  20220210.csv  20220211.csv  20220212.csv  20220213.csv  20220214.csv  (+9 more)
(+116 files in other folders)
